syntax = "proto3";

package xilian.algorithm.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.xilian.algorithm.v1";

// ============================================================
// Algorithm Service — 算法域微服务 gRPC 接口
// ============================================================
//
// 职责：
//   - 算法定义管理（CRUD + 版本控制）
//   - 算法执行引擎（单算法 + 组合编排）
//   - 设备-算法绑定管理
//   - 智能推荐引擎
//   - 执行历史与性能基准
//
// 通信模式：
//   - Unary RPC: CRUD 和单次执行
//   - Server Streaming: 长时间执行的进度推送
//   - 事件发布: 通过 Kafka 发布执行结果事件
// ============================================================

service AlgorithmService {
  // ── 算法定义 CRUD ──
  rpc CreateDefinition(CreateDefinitionRequest) returns (DefinitionResponse);
  rpc GetDefinition(GetDefinitionRequest) returns (DefinitionResponse);
  rpc ListDefinitions(ListDefinitionsRequest) returns (ListDefinitionsResponse);
  rpc UpdateDefinition(UpdateDefinitionRequest) returns (DefinitionResponse);
  rpc DeleteDefinition(DeleteDefinitionRequest) returns (google.protobuf.Empty);
  rpc SyncBuiltinAlgorithms(google.protobuf.Empty) returns (SyncResponse);

  // ── 算法执行 ──
  rpc ExecuteAlgorithm(ExecuteAlgorithmRequest) returns (ExecutionResponse);
  rpc ExecuteComposition(ExecuteCompositionRequest) returns (ExecutionResponse);
  rpc GetExecutionStatus(GetExecutionStatusRequest) returns (ExecutionStatusResponse);
  rpc StreamExecutionProgress(GetExecutionStatusRequest) returns (stream ExecutionProgress);
  rpc ListExecutionHistory(ListExecutionHistoryRequest) returns (ListExecutionHistoryResponse);

  // ── 设备-算法绑定 ──
  rpc BindAlgorithmToDevice(BindRequest) returns (BindingResponse);
  rpc UnbindAlgorithm(UnbindRequest) returns (google.protobuf.Empty);
  rpc ListDeviceBindings(ListBindingsRequest) returns (ListBindingsResponse);
  rpc GetRecommendedAlgorithms(RecommendRequest) returns (RecommendResponse);

  // ── 算法组合编排 ──
  rpc CreateComposition(CreateCompositionRequest) returns (CompositionResponse);
  rpc GetComposition(GetCompositionRequest) returns (CompositionResponse);
  rpc ListCompositions(ListCompositionsRequest) returns (ListCompositionsResponse);
  rpc UpdateComposition(UpdateCompositionRequest) returns (CompositionResponse);
  rpc DeleteComposition(DeleteCompositionRequest) returns (google.protobuf.Empty);

  // ── 路由规则 ──
  rpc CreateRoutingRule(CreateRoutingRuleRequest) returns (RoutingRuleResponse);
  rpc ListRoutingRules(ListRoutingRulesRequest) returns (ListRoutingRulesResponse);
  rpc UpdateRoutingRule(UpdateRoutingRuleRequest) returns (RoutingRuleResponse);
  rpc DeleteRoutingRule(DeleteRoutingRuleRequest) returns (google.protobuf.Empty);

  // ── 统计与基准 ──
  rpc GetOverviewStats(google.protobuf.Empty) returns (OverviewStatsResponse);
  rpc GetAlgorithmBenchmark(GetBenchmarkRequest) returns (BenchmarkResponse);

  // ── Worker 池状态 ──
  rpc GetWorkerPoolStatus(google.protobuf.Empty) returns (WorkerPoolStatusResponse);

  // ── 服务健康检查 ──
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
}

// ============================================================
// 消息定义
// ============================================================

message HealthCheckResponse {
  string status = 1;
  string version = 2;
  int64 uptime_seconds = 3;
  int32 registered_algorithms = 4;
  int32 active_workers = 5;
  map<string, string> checks = 6;
}

// ── 算法定义 ──
enum AlgorithmCategory {
  ALGORITHM_CATEGORY_UNSPECIFIED = 0;
  ANOMALY_DETECTION = 1;
  FEATURE_EXTRACTION = 2;
  MECHANICAL_ANALYSIS = 3;
  ELECTRICAL_ANALYSIS = 4;
  STRUCTURAL_ANALYSIS = 5;
  COMPREHENSIVE = 6;
  OPTIMIZATION = 7;
  RULE_LEARNING = 8;
  MODEL_ITERATION = 9;
  AGENT_PLUGIN = 10;
}

enum AlgorithmType {
  ALGORITHM_TYPE_UNSPECIFIED = 0;
  BUILTIN = 1;
  CUSTOM = 2;
  PIPELINE = 3;
  EXTERNAL = 4;
  ML_MODEL = 5;
}

message AlgorithmDefinition {
  string id = 1;
  string name = 2;
  string display_name = 3;
  AlgorithmCategory category = 4;
  AlgorithmType type = 5;
  string description = 6;
  string version = 7;
  repeated string applicable_device_types = 8;
  repeated string input_types = 9;
  repeated string output_types = 10;
  google.protobuf.Struct config_schema = 11;
  google.protobuf.Struct default_config = 12;
  bool gpu_required = 13;
  int64 avg_execution_ms = 14;
  string author = 15;
  string license = 16;
  bool enabled = 17;
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
}

message DefinitionResponse {
  AlgorithmDefinition definition = 1;
}

message CreateDefinitionRequest {
  string name = 1;
  string display_name = 2;
  AlgorithmCategory category = 3;
  AlgorithmType type = 4;
  string description = 5;
  string version = 6;
  repeated string applicable_device_types = 7;
  google.protobuf.Struct config_schema = 8;
  google.protobuf.Struct default_config = 9;
  bool gpu_required = 10;
}

message GetDefinitionRequest {
  string definition_id = 1;
}

message ListDefinitionsRequest {
  int32 page = 1;
  int32 page_size = 2;
  AlgorithmCategory category_filter = 3;
  AlgorithmType type_filter = 4;
  string search = 5;
  string device_type = 6;
}

message ListDefinitionsResponse {
  repeated AlgorithmDefinition definitions = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateDefinitionRequest {
  string definition_id = 1;
  optional string display_name = 2;
  optional string description = 3;
  optional string version = 4;
  optional google.protobuf.Struct config_schema = 5;
  optional google.protobuf.Struct default_config = 6;
  optional bool enabled = 7;
}

message DeleteDefinitionRequest {
  string definition_id = 1;
}

message SyncResponse {
  int32 added = 1;
  int32 updated = 2;
  int32 unchanged = 3;
}

// ── 算法执行 ──
message ExecuteAlgorithmRequest {
  string algorithm_id = 1;
  AlgorithmInput input = 2;
  google.protobuf.Struct config = 3;
  string node_id = 4;
  string sensor_id = 5;
  int32 timeout_ms = 6;
  bool use_worker = 7;  // 强制使用 Worker 线程
  string execution_tag = 8;  // 自定义标签（用于追踪）
}

message AlgorithmInput {
  repeated double data = 1;
  double sampling_rate = 2;
  string data_type = 3;
  google.protobuf.Struct metadata = 4;
  repeated ChannelData channels = 5;  // 多通道输入
}

message ChannelData {
  string channel_id = 1;
  repeated double data = 2;
  string unit = 3;
}

message ExecutionResponse {
  string execution_id = 1;
  string algorithm_id = 2;
  string status = 3;  // success | error | timeout
  AlgorithmOutput output = 4;
  int64 duration_ms = 5;
  string worker_id = 6;
  string trace_id = 7;
}

message AlgorithmOutput {
  google.protobuf.Struct results = 1;
  repeated Anomaly anomalies = 2;
  repeated Feature features = 3;
  double confidence = 4;
  string severity = 5;
  string summary = 6;
}

message Anomaly {
  int64 index = 1;
  double value = 2;
  double score = 3;
  string type = 4;
  string description = 5;
}

message Feature {
  string name = 1;
  double value = 2;
  string unit = 3;
  string category = 4;
}

message ExecuteCompositionRequest {
  string composition_id = 1;
  AlgorithmInput input = 2;
  google.protobuf.Struct global_config = 3;
  string node_id = 4;
}

message GetExecutionStatusRequest {
  string execution_id = 1;
}

message ExecutionStatusResponse {
  string execution_id = 1;
  string status = 2;
  double progress = 3;
  string current_stage = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp completed_at = 6;
  AlgorithmOutput output = 7;
}

message ExecutionProgress {
  string execution_id = 1;
  double progress = 2;
  string stage = 3;
  string message = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ListExecutionHistoryRequest {
  int32 page = 1;
  int32 page_size = 2;
  string algorithm_id = 3;
  string node_id = 4;
  string status_filter = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}

message ExecutionRecord {
  string execution_id = 1;
  string algorithm_id = 2;
  string algorithm_name = 3;
  string node_id = 4;
  string status = 5;
  int64 duration_ms = 6;
  int64 input_size = 7;
  string trace_id = 8;
  google.protobuf.Timestamp executed_at = 9;
}

message ListExecutionHistoryResponse {
  repeated ExecutionRecord records = 1;
  int32 total = 2;
}

// ── 设备绑定 ──
message BindRequest {
  string algorithm_id = 1;
  string node_id = 2;
  google.protobuf.Struct config_override = 3;
  string schedule_cron = 4;
  bool auto_execute = 5;
}

message BindingResponse {
  string binding_id = 1;
  string algorithm_id = 2;
  string node_id = 3;
  google.protobuf.Struct config = 4;
  bool active = 5;
}

message UnbindRequest {
  string binding_id = 1;
}

message ListBindingsRequest {
  string node_id = 1;
  string algorithm_id = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListBindingsResponse {
  repeated BindingResponse bindings = 1;
  int32 total = 2;
}

message RecommendRequest {
  string node_id = 1;
  string device_type = 2;
  repeated string sensor_types = 3;
  int32 max_results = 4;
}

message RecommendResponse {
  repeated RecommendedAlgorithm recommendations = 1;
}

message RecommendedAlgorithm {
  AlgorithmDefinition definition = 1;
  double relevance_score = 2;
  string reason = 3;
}

// ── 组合编排 ──
message AlgorithmComposition {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated CompositionStep steps = 4;
  string execution_mode = 5;  // sequential | parallel | dag
  google.protobuf.Timestamp created_at = 6;
}

message CompositionStep {
  string step_id = 1;
  string algorithm_id = 2;
  google.protobuf.Struct config = 3;
  repeated string depends_on = 4;
  string input_mapping = 5;
  string output_mapping = 6;
  bool optional = 7;
}

message CompositionResponse {
  AlgorithmComposition composition = 1;
}

message CreateCompositionRequest {
  string name = 1;
  string description = 2;
  repeated CompositionStep steps = 3;
  string execution_mode = 4;
}

message GetCompositionRequest {
  string composition_id = 1;
}

message ListCompositionsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListCompositionsResponse {
  repeated AlgorithmComposition compositions = 1;
  int32 total = 2;
}

message UpdateCompositionRequest {
  string composition_id = 1;
  optional string name = 2;
  optional string description = 3;
  repeated CompositionStep steps = 4;
}

message DeleteCompositionRequest {
  string composition_id = 1;
}

// ── 路由规则 ──
message RoutingRule {
  string id = 1;
  string name = 2;
  string condition_expression = 3;  // CEL 表达式
  string target_algorithm_id = 4;
  string target_composition_id = 5;
  int32 priority = 6;
  bool enabled = 7;
  google.protobuf.Timestamp created_at = 8;
}

message RoutingRuleResponse {
  RoutingRule rule = 1;
}

message CreateRoutingRuleRequest {
  string name = 1;
  string condition_expression = 2;
  string target_algorithm_id = 3;
  string target_composition_id = 4;
  int32 priority = 5;
}

message ListRoutingRulesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListRoutingRulesResponse {
  repeated RoutingRule rules = 1;
  int32 total = 2;
}

message UpdateRoutingRuleRequest {
  string rule_id = 1;
  optional string name = 2;
  optional string condition_expression = 3;
  optional int32 priority = 4;
  optional bool enabled = 5;
}

message DeleteRoutingRuleRequest {
  string rule_id = 1;
}

// ── 统计 ──
message OverviewStatsResponse {
  int32 total_definitions = 1;
  int32 total_bindings = 2;
  int32 total_compositions = 3;
  int32 total_executions_today = 4;
  double avg_execution_ms = 5;
  double success_rate = 6;
  map<string, int32> executions_by_category = 7;
}

message GetBenchmarkRequest {
  string algorithm_id = 1;
  int32 sample_count = 2;
}

message BenchmarkResponse {
  string algorithm_id = 1;
  double avg_ms = 2;
  double p50_ms = 3;
  double p95_ms = 4;
  double p99_ms = 5;
  double min_ms = 6;
  double max_ms = 7;
  int32 total_runs = 8;
}

// ── Worker 池 ──
message WorkerPoolStatusResponse {
  int32 total_workers = 1;
  int32 active_workers = 2;
  int32 idle_workers = 3;
  int32 queue_length = 4;
  int64 total_tasks_processed = 5;
  int64 total_tasks_failed = 6;
  double avg_task_duration_ms = 7;
}
