/**
 * 边缘计算增强服务
 * 提供 TensorRT-LLM 边缘推理、边缘网关、5G TSN 低延迟通信等功能
 */

// ==================== 类型定义 ====================

export interface EdgeNode {
  id: string;
  name: string;
  location: {
    zone: string;
    rack?: string;
    coordinates?: { lat: number; lng: number };
  };
  hardware: {
    cpu: { model: string; cores: number; frequency: number };
    memory: { total: number; type: string };
    gpu?: { model: string; memory: number; tensorCores?: number };
    storage: { type: 'nvme' | 'ssd' | 'hdd'; capacity: number };
    network: { interfaces: Array<{ name: string; speed: number; type: string }> };
  };
  status: 'online' | 'offline' | 'degraded' | 'maintenance';
  metrics: {
    cpu: number;
    memory: number;
    gpu?: number;
    network: { rx: number; tx: number };
    temperature: number;
    uptime: number;
  };
  capabilities: string[];
  lastHeartbeat: number;
  createdAt: number;
}

export interface EdgeModel {
  id: string;
  name: string;
  version: string;
  type: 'llm' | 'vision' | 'audio' | 'multimodal';
  framework: 'tensorrt' | 'onnx' | 'tflite' | 'openvino';
  size: number;
  precision: 'fp32' | 'fp16' | 'int8' | 'int4';
  inputShape: number[];
  outputShape: number[];
  performance: {
    latency: number;
    throughput: number;
    memoryUsage: number;
  };
  deployedNodes: string[];
  status: 'ready' | 'deploying' | 'failed';
  createdAt: number;
  updatedAt: number;
}

export interface InferenceRequest {
  id: string;
  modelId: string;
  nodeId?: string;
  input: unknown;
  priority: 'low' | 'normal' | 'high' | 'critical';
  timeout: number;
  timestamp: number;
}

export interface InferenceResult {
  requestId: string;
  modelId: string;
  nodeId: string;
  output: unknown;
  latency: number;
  confidence?: number;
  status: 'success' | 'failed' | 'timeout';
  error?: string;
  timestamp: number;
}

export interface EdgeGateway {
  id: string;
  name: string;
  type: 'mqtt' | 'opcua' | 'modbus' | 'http' | 'grpc';
  endpoint: string;
  status: 'connected' | 'disconnected' | 'error';
  config: {
    protocol: string;
    port: number;
    tls: boolean;
    authentication?: {
      type: 'basic' | 'certificate' | 'token';
      credentials?: string;
    };
    bufferSize: number;
    retryPolicy: {
      maxRetries: number;
      backoffMs: number;
    };
  };
  metrics: {
    messagesReceived: number;
    messagesSent: number;
    bytesReceived: number;
    bytesSent: number;
    errors: number;
    latency: number;
  };
  connectedDevices: number;
  lastActivity: number;
  createdAt: number;
}

export interface TSNConfig {
  id: string;
  name: string;
  network: {
    vlan: number;
    priority: number;
    bandwidth: number;
    latencyTarget: number;
  };
  schedule: {
    cycleTime: number;
    gateControlList: Array<{
      gateState: number;
      timeInterval: number;
    }>;
  };
  streams: Array<{
    id: string;
    source: string;
    destination: string;
    priority: number;
    maxFrameSize: number;
    interval: number;
  }>;
  status: 'active' | 'inactive' | 'configuring';
  metrics: {
    jitter: number;
    packetLoss: number;
    latency: number;
    bandwidth: number;
  };
  createdAt: number;
  updatedAt: number;
}

export interface FiveGConfig {
  id: string;
  name: string;
  slice: {
    type: 'embb' | 'urllc' | 'mmtc';
    qos: {
      latency: number;
      reliability: number;
      bandwidth: number;
    };
  };
  connection: {
    apn: string;
    imsi?: string;
    status: 'connected' | 'disconnected' | 'roaming';
    signalStrength: number;
    technology: '5g-sa' | '5g-nsa' | 'lte';
  };
  metrics: {
    throughput: { uplink: number; downlink: number };
    latency: number;
    packetLoss: number;
    handovers: number;
  };
  createdAt: number;
  updatedAt: number;
}

// ==================== TensorRT-LLM 边缘推理服务 ====================

export class EdgeInferenceService {
  private nodes: Map<string, EdgeNode> = new Map();
  private models: Map<string, EdgeModel> = new Map();
  private requestQueue: InferenceRequest[] = [];
  private results: Map<string, InferenceResult> = new Map();
  private processingInterval?: NodeJS.Timeout;

  constructor() {
    console.log('[EdgeInference] TensorRT-LLM 边缘推理服务已初始化');
    this.startProcessing();
  }

  // ==================== 节点管理 ====================

  registerNode(node: Omit<EdgeNode, 'id' | 'createdAt'>): EdgeNode {
    const newNode: EdgeNode = {
      ...node,
      id: `edge-${Date.now()}-${Math.random().toString(36).substr(2, 9)}`,
      createdAt: Date.now(),
    };

    this.nodes.set(newNode.id, newNode);
    console.log(`[EdgeInference] 注册边缘节点: ${newNode.name}`);
    return newNode;
  }

  updateNodeStatus(nodeId: string, status: EdgeNode['status'], metrics?: Partial<EdgeNode['metrics']>): EdgeNode {
    const node = this.nodes.get(nodeId);
    if (!node) {
      throw new Error(`Node ${nodeId} not found`);
    }

    node.status = status;
    node.lastHeartbeat = Date.now();
    if (metrics) {
      node.metrics = { ...node.metrics, ...metrics };
    }

    return node;
  }

  getNode(nodeId: string): EdgeNode | undefined {
    return this.nodes.get(nodeId);
  }

  listNodes(options?: { status?: EdgeNode['status']; zone?: string }): EdgeNode[] {
    let nodes = Array.from(this.nodes.values());

    if (options?.status) {
      nodes = nodes.filter(n => n.status === options.status);
    }

    if (options?.zone) {
      nodes = nodes.filter(n => n.location.zone === options.zone);
    }

    return nodes;
  }

  removeNode(nodeId: string): void {
    this.nodes.delete(nodeId);
    console.log(`[EdgeInference] 移除边缘节点: ${nodeId}`);
  }

  // ==================== 模型管理 ====================

  deployModel(model: Omit<EdgeModel, 'id' | 'createdAt' | 'updatedAt' | 'status'>): EdgeModel {
    const newModel: EdgeModel = {
      ...model,
      id: `model-${Date.now()}`,
      status: 'deploying',
      createdAt: Date.now(),
      updatedAt: Date.now(),
    };

    this.models.set(newModel.id, newModel);
    console.log(`[EdgeInference] 部署模型: ${newModel.name} v${newModel.version}`);

    // 模拟部署过程
    setTimeout(() => {
      newModel.status = 'ready';
      newModel.updatedAt = Date.now();
      console.log(`[EdgeInference] 模型部署完成: ${newModel.name}`);
    }, 2000);

    return newModel;
  }

  getModel(modelId: string): EdgeModel | undefined {
    return this.models.get(modelId);
  }

  listModels(options?: { type?: EdgeModel['type']; status?: EdgeModel['status'] }): EdgeModel[] {
    let models = Array.from(this.models.values());

    if (options?.type) {
      models = models.filter(m => m.type === options.type);
    }

    if (options?.status) {
      models = models.filter(m => m.status === options.status);
    }

    return models;
  }

  undeployModel(modelId: string): void {
    this.models.delete(modelId);
    console.log(`[EdgeInference] 卸载模型: ${modelId}`);
  }

  // ==================== 推理请求 ====================

  async infer(request: Omit<InferenceRequest, 'id' | 'timestamp'>): Promise<InferenceResult> {
    const fullRequest: InferenceRequest = {
      ...request,
      id: `req-${Date.now()}-${Math.random().toString(36).substr(2, 9)}`,
      timestamp: Date.now(),
    };

    // 选择最佳节点
    const nodeId = request.nodeId || this.selectBestNode(request.modelId);
    if (!nodeId) {
      return {
        requestId: fullRequest.id,
        modelId: request.modelId,
        nodeId: '',
        output: null,
        latency: 0,
        status: 'failed',
        error: 'No available node',
        timestamp: Date.now(),
      };
    }

    // 执行推理
    const result = await this.executeInference(fullRequest, nodeId);
    this.results.set(fullRequest.id, result);
    return result;
  }

  async batchInfer(requests: Array<Omit<InferenceRequest, 'id' | 'timestamp'>>): Promise<InferenceResult[]> {
    const results = await Promise.all(requests.map(req => this.infer(req)));
    return results;
  }

  getResult(requestId: string): InferenceResult | undefined {
    return this.results.get(requestId);
  }

  // ==================== 私有方法 ====================

  private selectBestNode(modelId: string): string | null {
    const model = this.models.get(modelId);
    if (!model || model.deployedNodes.length === 0) {
      // 选择任意可用节点
      const availableNodes = Array.from(this.nodes.values()).filter(n => n.status === 'online');
      if (availableNodes.length === 0) return null;

      // 选择负载最低的节点
      availableNodes.sort((a, b) => a.metrics.cpu - b.metrics.cpu);
      return availableNodes[0].id;
    }

    // 从已部署模型的节点中选择
    const deployedNodes = model.deployedNodes
      .map(id => this.nodes.get(id))
      .filter((n): n is EdgeNode => n !== undefined && n.status === 'online');

    if (deployedNodes.length === 0) return null;

    // 选择负载最低的节点
    deployedNodes.sort((a, b) => a.metrics.cpu - b.metrics.cpu);
    return deployedNodes[0].id;
  }

  private async executeInference(request: InferenceRequest, nodeId: string): Promise<InferenceResult> {
    const startTime = Date.now();
    const node = this.nodes.get(nodeId);
    const model = this.models.get(request.modelId);

    try {
      // 模拟推理延迟
      const baseLatency = model?.performance.latency || 50;
      const jitter = Math.random() * 20 - 10;
      await new Promise(resolve => setTimeout(resolve, baseLatency + jitter));

      // 模拟推理结果
      const output = this.generateMockOutput(model?.type || 'llm', request.input);

      return {
        requestId: request.id,
        modelId: request.modelId,
        nodeId,
        output,
        latency: Date.now() - startTime,
        confidence: 0.85 + Math.random() * 0.15,
        status: 'success',
        timestamp: Date.now(),
      };
    } catch (error) {
      return {
        requestId: request.id,
        modelId: request.modelId,
        nodeId,
        output: null,
        latency: Date.now() - startTime,
        status: 'failed',
        error: String(error),
        timestamp: Date.now(),
      };
    }
  }

  private generateMockOutput(modelType: string, input: unknown): unknown {
    switch (modelType) {
      case 'llm':
        return {
          text: '这是一个模拟的 LLM 推理结果。',
          tokens: 15,
        };
      case 'vision':
        return {
          objects: [
            { class: 'crane', confidence: 0.95, bbox: [100, 100, 200, 200] },
            { class: 'container', confidence: 0.92, bbox: [300, 150, 400, 250] },
          ],
        };
      case 'audio':
        return {
          transcription: '模拟的语音识别结果',
          language: 'zh-CN',
        };
      default:
        return { result: 'mock output' };
    }
  }

  private startProcessing(): void {
    this.processingInterval = setInterval(() => {
      // 处理队列中的请求
      while (this.requestQueue.length > 0) {
        const request = this.requestQueue.shift();
        if (request) {
          this.infer(request);
        }
      }
    }, 100);
  }

  cleanup(): void {
    if (this.processingInterval) {
      clearInterval(this.processingInterval);
    }
  }
}

// ==================== 边缘网关服务 ====================

export class EdgeGatewayService {
  private gateways: Map<string, EdgeGateway> = new Map();
  private messageHandlers: Map<string, (message: unknown) => void> = new Map();

  constructor() {
    console.log('[EdgeGateway] 边缘网关服务已初始化');
  }

  // 创建网关
  createGateway(gateway: Omit<EdgeGateway, 'id' | 'createdAt' | 'metrics'>): EdgeGateway {
    const newGateway: EdgeGateway = {
      ...gateway,
      id: `gw-${Date.now()}`,
      metrics: {
        messagesReceived: 0,
        messagesSent: 0,
        bytesReceived: 0,
        bytesSent: 0,
        errors: 0,
        latency: 0,
      },
      createdAt: Date.now(),
    };

    this.gateways.set(newGateway.id, newGateway);
    console.log(`[EdgeGateway] 创建网关: ${newGateway.name} (${newGateway.type})`);
    return newGateway;
  }

  // 连接网关
  async connectGateway(gatewayId: string): Promise<void> {
    const gateway = this.gateways.get(gatewayId);
    if (!gateway) {
      throw new Error(`Gateway ${gatewayId} not found`);
    }

    console.log(`[EdgeGateway] 连接网关: ${gateway.name}`);

    // 模拟连接过程
    await new Promise(resolve => setTimeout(resolve, 500));
    gateway.status = 'connected';
    gateway.lastActivity = Date.now();

    console.log(`[EdgeGateway] 网关已连接: ${gateway.name}`);
  }

  // 断开网关
  async disconnectGateway(gatewayId: string): Promise<void> {
    const gateway = this.gateways.get(gatewayId);
    if (!gateway) {
      throw new Error(`Gateway ${gatewayId} not found`);
    }

    console.log(`[EdgeGateway] 断开网关: ${gateway.name}`);
    gateway.status = 'disconnected';
  }

  // 发送消息
  async sendMessage(gatewayId: string, topic: string, payload: unknown): Promise<void> {
    const gateway = this.gateways.get(gatewayId);
    if (!gateway) {
      throw new Error(`Gateway ${gatewayId} not found`);
    }

    if (gateway.status !== 'connected') {
      throw new Error(`Gateway ${gatewayId} is not connected`);
    }

    // 模拟发送
    const payloadSize = JSON.stringify(payload).length;
    gateway.metrics.messagesSent++;
    gateway.metrics.bytesSent += payloadSize;
    gateway.lastActivity = Date.now();

    console.log(`[EdgeGateway] 发送消息: ${gateway.name} -> ${topic}`);
  }

  // 订阅消息
  subscribe(gatewayId: string, topic: string, handler: (message: unknown) => void): void {
    const key = `${gatewayId}:${topic}`;
    this.messageHandlers.set(key, handler);
    console.log(`[EdgeGateway] 订阅主题: ${topic}`);
  }

  // 取消订阅
  unsubscribe(gatewayId: string, topic: string): void {
    const key = `${gatewayId}:${topic}`;
    this.messageHandlers.delete(key);
    console.log(`[EdgeGateway] 取消订阅: ${topic}`);
  }

  // 获取网关
  getGateway(gatewayId: string): EdgeGateway | undefined {
    return this.gateways.get(gatewayId);
  }

  // 列出网关
  listGateways(options?: { type?: EdgeGateway['type']; status?: EdgeGateway['status'] }): EdgeGateway[] {
    let gateways = Array.from(this.gateways.values());

    if (options?.type) {
      gateways = gateways.filter(g => g.type === options.type);
    }

    if (options?.status) {
      gateways = gateways.filter(g => g.status === options.status);
    }

    return gateways;
  }

  // 删除网关
  deleteGateway(gatewayId: string): void {
    this.gateways.delete(gatewayId);
    console.log(`[EdgeGateway] 删除网关: ${gatewayId}`);
  }

  // 模拟接收消息
  simulateMessage(gatewayId: string, topic: string, payload: unknown): void {
    const gateway = this.gateways.get(gatewayId);
    if (!gateway) return;

    const payloadSize = JSON.stringify(payload).length;
    gateway.metrics.messagesReceived++;
    gateway.metrics.bytesReceived += payloadSize;
    gateway.lastActivity = Date.now();

    const key = `${gatewayId}:${topic}`;
    const handler = this.messageHandlers.get(key);
    if (handler) {
      handler(payload);
    }
  }
}

// ==================== 5G TSN 低延迟通信服务 ====================

export class TSNService {
  private configs: Map<string, TSNConfig> = new Map();
  private fiveGConfigs: Map<string, FiveGConfig> = new Map();

  constructor() {
    console.log('[TSN] 5G TSN 低延迟通信服务已初始化');
  }

  // ==================== TSN 配置管理 ====================

  createTSNConfig(config: Omit<TSNConfig, 'id' | 'createdAt' | 'updatedAt' | 'status' | 'metrics'>): TSNConfig {
    const newConfig: TSNConfig = {
      ...config,
      id: `tsn-${Date.now()}`,
      status: 'configuring',
      metrics: {
        jitter: 0,
        packetLoss: 0,
        latency: 0,
        bandwidth: 0,
      },
      createdAt: Date.now(),
      updatedAt: Date.now(),
    };

    this.configs.set(newConfig.id, newConfig);
    console.log(`[TSN] 创建 TSN 配置: ${newConfig.name}`);

    // 模拟配置过程
    setTimeout(() => {
      newConfig.status = 'active';
      newConfig.metrics = {
        jitter: 0.1 + Math.random() * 0.2,
        packetLoss: Math.random() * 0.01,
        latency: config.network.latencyTarget * (0.8 + Math.random() * 0.2),
        bandwidth: config.network.bandwidth * (0.9 + Math.random() * 0.1),
      };
      newConfig.updatedAt = Date.now();
      console.log(`[TSN] TSN 配置已激活: ${newConfig.name}`);
    }, 1000);

    return newConfig;
  }

  updateTSNConfig(id: string, updates: Partial<TSNConfig>): TSNConfig {
    const config = this.configs.get(id);
    if (!config) {
      throw new Error(`TSN config ${id} not found`);
    }

    const updatedConfig = {
      ...config,
      ...updates,
      updatedAt: Date.now(),
    };

    this.configs.set(id, updatedConfig);
    return updatedConfig;
  }

  getTSNConfig(id: string): TSNConfig | undefined {
    return this.configs.get(id);
  }

  listTSNConfigs(): TSNConfig[] {
    return Array.from(this.configs.values());
  }

  deleteTSNConfig(id: string): void {
    this.configs.delete(id);
    console.log(`[TSN] 删除 TSN 配置: ${id}`);
  }

  // ==================== 5G 配置管理 ====================

  create5GConfig(config: Omit<FiveGConfig, 'id' | 'createdAt' | 'updatedAt' | 'metrics'>): FiveGConfig {
    const newConfig: FiveGConfig = {
      ...config,
      id: `5g-${Date.now()}`,
      metrics: {
        throughput: { uplink: 0, downlink: 0 },
        latency: 0,
        packetLoss: 0,
        handovers: 0,
      },
      createdAt: Date.now(),
      updatedAt: Date.now(),
    };

    this.fiveGConfigs.set(newConfig.id, newConfig);
    console.log(`[TSN] 创建 5G 配置: ${newConfig.name} (${newConfig.slice.type})`);

    // 模拟连接过程
    setTimeout(() => {
      newConfig.connection.status = 'connected';
      newConfig.connection.signalStrength = -70 + Math.random() * 30;
      newConfig.metrics = {
        throughput: {
          uplink: newConfig.slice.qos.bandwidth * 0.3 * (0.8 + Math.random() * 0.2),
          downlink: newConfig.slice.qos.bandwidth * 0.7 * (0.8 + Math.random() * 0.2),
        },
        latency: newConfig.slice.qos.latency * (0.8 + Math.random() * 0.4),
        packetLoss: (1 - newConfig.slice.qos.reliability) * Math.random(),
        handovers: 0,
      };
      newConfig.updatedAt = Date.now();
      console.log(`[TSN] 5G 连接已建立: ${newConfig.name}`);
    }, 1500);

    return newConfig;
  }

  update5GConfig(id: string, updates: Partial<FiveGConfig>): FiveGConfig {
    const config = this.fiveGConfigs.get(id);
    if (!config) {
      throw new Error(`5G config ${id} not found`);
    }

    const updatedConfig = {
      ...config,
      ...updates,
      updatedAt: Date.now(),
    };

    this.fiveGConfigs.set(id, updatedConfig);
    return updatedConfig;
  }

  get5GConfig(id: string): FiveGConfig | undefined {
    return this.fiveGConfigs.get(id);
  }

  list5GConfigs(): FiveGConfig[] {
    return Array.from(this.fiveGConfigs.values());
  }

  delete5GConfig(id: string): void {
    this.fiveGConfigs.delete(id);
    console.log(`[TSN] 删除 5G 配置: ${id}`);
  }

  // ==================== 性能监控 ====================

  getNetworkMetrics(): {
    tsn: Array<{ id: string; name: string; metrics: TSNConfig['metrics'] }>;
    fiveG: Array<{ id: string; name: string; metrics: FiveGConfig['metrics'] }>;
  } {
    return {
      tsn: Array.from(this.configs.values()).map(c => ({
        id: c.id,
        name: c.name,
        metrics: c.metrics,
      })),
      fiveG: Array.from(this.fiveGConfigs.values()).map(c => ({
        id: c.id,
        name: c.name,
        metrics: c.metrics,
      })),
    };
  }

  // 模拟网络性能测试
  async runLatencyTest(configId: string, type: 'tsn' | '5g'): Promise<{
    minLatency: number;
    maxLatency: number;
    avgLatency: number;
    jitter: number;
    packetLoss: number;
  }> {
    const samples = 100;
    const latencies: number[] = [];

    for (let i = 0; i < samples; i++) {
      // 模拟延迟测量
      const baseLatency = type === 'tsn' ? 0.5 : 5;
      latencies.push(baseLatency + Math.random() * baseLatency * 0.5);
    }

    const minLatency = Math.min(...latencies);
    const maxLatency = Math.max(...latencies);
    const avgLatency = latencies.reduce((a, b) => a + b, 0) / samples;
    const jitter = maxLatency - minLatency;
    const packetLoss = Math.random() * 0.001;

    return { minLatency, maxLatency, avgLatency, jitter, packetLoss };
  }
}

// ==================== 导出服务实例 ====================

export const edgeInferenceService = new EdgeInferenceService();
export const edgeGatewayService = new EdgeGatewayService();
export const tsnService = new TSNService();
